# DeBERTa

./: .gitignore  .pre-commit-config.yaml  README.md  TIPS.md  dataset_test.py  pyproject.toml
DeBERTa/apps/: _utils.py  run.py
DeBERTa/apps/models/: __init__.py  masked_language_model.py  multi_choice.py  ner.py  record_qa.py  replaced_token_detection_model.py  sequence_classification.py
DeBERTa/apps/tasks/: glue_tasks.py  metrics.py  mlm_task.py  ner_task.py  race_task.py  record_eval.py  rtd_task.py  superglue_tasks.py  task.py  task_registry.py
DeBERTa/data/: __init__.py  async_data.py  data_sampler.py  dataloader.py  dynamic_dataset.py  example.py  file_list_dataset.py
DeBERTa/deberta/: __init__.py  bert.py  cache_utils.py  config.py  da_utils.py  deberta.py  disentangled_attention.py  gpt2_bpe_utils.py  gpt2_tokenizer.py  mlm.py  nnmodule.py  ops.py  pooling.py  spm_tokenizer.py  tokenizers.py
DeBERTa/optims/: __init__.py  args.py  fp16_optimizer.py  lr_schedulers.py  xadam.py
DeBERTa/sift/: README.md  sift.py
DeBERTa/training/: __init__.py  _utils.py  args.py  dist_launcher.py  optimizer_utils.py  trainer.py
DeBERTa/utils/: __init__.py  jit_tracing.py  logger_util.py  xtqdm.py
docker/: Dockerfile
docs/source/: conf.py
docs/source/modules/: deberta.rst
experiments/glue/: README.md  cola.sh  download_data.sh  mnli.sh  mrpc.sh  patch.diff  qnli.sh  qqp.sh  rte.sh  sst2.sh  stsb.sh
experiments/language_model/: DATA.md  README.md  convert_parquet_to_jsonl.py  count_tokens.py  export_model.py  mlm.sh  prepare_data.py  preprocess_data.py  rtd.sh  rtd_base.json  rtd_large.json  rtd_small.json  rtd_xsmall.json  split_dataset.py
experiments/my_exp/: alpha_nli.py  race_task.py  run_anli.sh  run_race.sh
experiments/ner/: ner.sh
experiments/superglue/: README.md  copa.sh  download_data.sh  record.sh
