[tool.poetry]
name = "DeBERTa"
version = "0.1.0" # Update this based on your VERSION file or other logic
description = "Decoding enhanced BERT with Disentangled Attention"
authors = ["penhe <penhe@microsoft.com>"]
license = "MIT"
readme = "README.md" # This will not include dynamic git version info
repository = "https://github.com/microsoft/DeBERTa"
keywords = ["NLP", "deep learning", "transformer", "pytorch", "Attention", "BERT", "RoBERTa", "DeBERTa"]
packages = [
    { include = "DeBERTa", from = "." },
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "~2.1.1"
sentencepiece = "^0.1.99"
numpy = "^1.26"
regex = "^2023.10"
psutil = "^5.9"
tqdm = "^4.66"
scipy = "^1.11"
ujson = "^5.9"
seqeval = "^1.2"
scikit-learn = "^1.3"
spacy = "^3.7"
nltk = "^3.8"
requests = "^2.31.0"
datasets = "^2.16.1"
wandb = "^0.16.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

#[tool.poetry.group.docs.dependencies]
#recommonmark = "*"
#sphinx = "*"
#sphinx-markdown-tables = "*"
#sphinx-rtd-theme = "*"
types-tqdm = "^4.66.0.20240106"

[tool.ruff]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py38"
ignore = [
    "F403",
    "F405",
    "F841",
    "F821",
    "E741",
    "E722",
    "E501",
    "B904",
    "B020",
    "B023",
    "PLW2901",
    "PLW0603",
    "COM812",
]
select = ["F", "E", "W", "I", "B", "UP", "COM", "PT", "PYI"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
